--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="main">
-      <h1>This is a simple vanilla CSS loader</h1>
+      <h1>This website never loads! (A simple vanilla CSS loader)</h1>
       <div id="loader"></div>
     </div>
   </body>
